Fix search form layout on mobile devices (task #5189)

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -46,6 +46,27 @@
     border-color: #d2d6de;
 }
 
+@media (max-width: 767px) {
+    .search-form-top-menu.navbar-left {
+        float: left !important;
+    }
+
+    .search-form-top-menu.navbar-form {
+        width: auto;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-right: 0;
+        margin-left: 0;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .search-form-top-menu.navbar-form .input-group .input-group-btn {
+        width: auto;
+    }
+}
+
 #control-sidebar-settings-tab {
     margin: -10px -15px;
 }
